<resources>

    <string name="home"> HOME</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="category">Category</string>
    <string name="institution">INSTITUTION</string>
    <string name="reviewer">REVIEWER</string>
    <string name="reviewer_portrait">REVIEWER</string>
    <string name="institution_portrait">INSTITUTION</string>
    <string name="search">Search</string>
    <string name="search_btn">SEARCH</string>
    <string name="education_level_small_caps">Education level</string>
    <string name="name_of_institution">Name of Institution</string>
    <string name="password">password</string>
    <string name="personal_email">Personal Email</string>
    <string name="website_link">Website Link</string>
    <string name="school_email">School Email</string>
    <string name="account_name_reviewer">Account Name</string>
    <string name="email_reviewer">Email</string>
    <string name="password_reviewer">password</string>
    <string name="profile_home_two">Profile</string>
    <string name="profile">Profile</string>
    <string name="following">Following</string>
    <string name="reviews">Reviews</string>
    <string name="share">Share</string>
    <string name="splash_screen">Splash_screen</string>

    <!-- STRINGS FOR THE INTRO_SLIDERS FOR INSTITUTION-->
    <string name="next"> Next </string>
    <string name="skip"> Skip</string>
    <string name="start"> Start</string>
    <string name="title_slide_one"> WELCOME</string>
    <string name="desc_one"> My School Reviewer </string>
    <string name="title_slide_two"> PART TWO</string>
    <string name="desc_two">My part two </string>
    <string name="title_slide_three"> PART THREE</string>
    <string name="desc_three"> my part three </string>
    <string name="hello">hello</string>
    <string name="next_institution">NEXT</string>
    <string name="ok">OK</string>
    <string name="maps">Maps</string>
    <string name="following_institution">Following</string>
    <string name="institution_profile">Institution Profile</string>
    <string name="updates">Updates</string>
    <string name="view_reviews">View reviews</string>
    <string name="edit_institution_profile">Edit institution profile</string>
    <string name="institution_">Institution</string>
    <string name="name_of_institution_">Name of Institution</string>
    <string name="password_">Password</string>
    <string name="password__">Password</string>
    <string name="personal_email_">Personal Email</string>
    <string name="school_email_">School Email</string>
    <string name="website_link_">website link</string>
    <string name="account_name_">Account name</string>
    <string name="email_">Email</string>
    <string name="password___">Password</string>
    <string name="next_reviewer">Next</string>
    <string name="institution_number">Institution number</string>
    <string name="institution_index_number">Institution Index Number</string>
    <string name="website_link__">Website Link</string>
    <string name="institution_ed">Institution</string>
    <string name="category_ed">Category</string>
    <string name="index_number_ed">Index Number</string>
    <string name="institution_email_ed">Institution Email</string>
    <string name="institution_email_ed_ed">Institution Email</string>
    <string name="institution_index_number_ed">Institution Index Number</string>
    <string name="institution_website_ed">Institution Website</string>
    <string name="institution_ed_ed">Institution</string>
    <string name="password_ed">Password</string>
    <string name="name_ed_De">Name</string>
    <string name="password_ed_ed_ed">Password</string>
    <string name="personal_email_ed">Personal Email</string>
    <string name="personal_email_ed_ed">Personal Email</string>
    <string name="next_btn">Next</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="first_name_">First Name</string>
    <string name="last_name_">Last Name</string>
    <string name="user_name__">User Name</string>
    <string name="user_name___">User Name</string>
    <string name="img_reviwer_signup">image1</string>
    <string name="image_for_individual_home">image_for_individual_home</string>
    <string name="imageforinstitutionhome">imageforinstitutionhome</string>
    <string name="imagesinstitution">imagesinstitution</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="followers">Followers</string>
    <string name="sharing">Share</string>
    <string name="reviewsss">Reviews</string>
    <string name="reviewssssss">Reviews</string>
    <string name="chat">Chat</string>
    <string name="search_school">SEARCH SCHOOL</string>
    <string name="school_home">SCHOOL HOME</string>
    <string name="account">Account</string>
    <string name="following_reviewer">Following</string>
    <string name="logout_reviewer">Logout</string>
    <string name="map">Map</string>
    <string name="share_reviewer">Share</string>
    <string name="write_reviews">Write Reviews</string>
    <string name="search_school_reviewer">SEARCH SCHOOL</string>
    <string name="index_number_insti">Index Number</string>
    <string name="image_1">image_1</string>
    <string name="image_2">image_2</string>
    <string name="image_3">image_3</string>


    <!-- STRINGS FOR INTRO_SLIDERS AS SHOWN ABOVE-->

    <string-array name="Category">
        <item> Private </item>
        <item> Government</item>
        <item> Cambridge</item>
    </string-array>

    <string-array name="Education_level">
        <item> Pre-school</item>
        <item> Primary</item>
        <item> Secondary</item>
        <item> University </item>
    </string-array>

    <string-array name="Institution_category">
        <item> Pre-school</item>
        <item>Primary</item>
        <item> Secondary</item>
        <item> University</item>
    </string-array>

    <string-array name="menu_for_individual"></string-array>
</resources>
