<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        tools:context="com.example.marto.my_school_revierwer_4.UploadImages">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar4"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="11dp"
            android:text="Image 1"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView14"
            android:layout_marginTop="17dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_1"
                app:srcCompat="@android:drawable/ic_menu_upload" />
        </LinearLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView14"
            android:layout_centerHorizontal="true"
            android:text="UPLOAD IMAGES"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView14"
            android:layout_alignStart="@+id/textView14"
            android:layout_below="@+id/linearLayout5"
            android:layout_marginTop="32dp"
            android:text="Image 2"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView21"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_2"
                app:srcCompat="@android:drawable/ic_menu_upload" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView21"
            android:layout_alignStart="@+id/textView21"
            android:layout_below="@+id/linearLayout6"
            android:layout_marginTop="38dp"
            android:text="Image 3"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/textView22"
            android:layout_marginTop="15dp">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_3"
                app:srcCompat="@android:drawable/ic_menu_upload" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:onClick="btn_images_upload"
            android:text="UPLOAD"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />


    </RelativeLayout>
</ScrollView>